[tool.poetry]
name = "flask_bulma_forms"
version = "0.0.7"
description = "WTF Forms with Bulma Styling"
readme = "README.md"
authors = ["Jeremy Bolding <cyberchefjay@gmail.com>"]
keywords = ["flask", "flask-extension", "bulma", "flask-bulma", "flask-wtf"]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Web Environment",
  "Framework :: Flask",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.urls]
  "Bug Tracker" = "https://www.github.com/thecodechef/flask_bulma_forms/issues"
  "Homepage" = "https://www.github.com/thecodechef/flask_bulma_forms.git"
  "Repository" = "https://www.github.com/thecodechef/flask_bulma_forms.git"
  "Documentation" = "https://www.github.com/thecodechef/flask_bulma_forms.git"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.1"
flask-wtf = "^0.14.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
tox = "^3.14.6"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
